update complete, with Main & Test