@@ -1,54 +1,37 @@
-import java.util.Arrays;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        // Repositories erstellen
+        // Initialize repositories
         ProductRepo productRepo = new ProductRepo();
-        ShopService shopService = new ShopService();
+        OrderRepo orderRepo = new OrderListRepo(); // You could also use OrderMapRepo
 
-        // Neue Produkte hinzufügen
-        Product apple = new Product("1", "Apple");
-        Product banana = new Product("2", "Banana");
-        productRepo.addProduct(apple);
-        productRepo.addProduct(banana);
+        // Initialize ShopService with repositories
+        ShopService shopService = new ShopService(productRepo, orderRepo);
 
-        // Produkte anzeigen
-        System.out.println("Available Products:");
-        productRepo.getProducts().forEach(product ->
-                System.out.println("ID: " + product.id() + ", Name: " + product.name())
-        );
+        // Add an order with a valid product ID
+        try {
+            List<String> productIds = List.of("1"); // Assuming "1" is a valid product ID in the repo
+            Order order = shopService.addOrder(productIds);
+            System.out.println("Order created: " + order);
 
-        // Eine Bestellung aufgeben
-        List<String> productIds = Arrays.asList("1", "2");
-        Order order1 = ShopService.addOrder(productIds);
+            // Update order status
+            Order updatedOrder = shopService.updateOrderStatus(order.id(), OrderStatus.COMPLETED);
+            System.out.println("Order status updated: " + updatedOrder);
 
-        if (order1 != null) {
-            System.out.println("\nOrder created:");
-            System.out.println("Order ID: " + order1.id());
-            System.out.println("Order Status: " + order1.status());
-            System.out.println("Order Date: " + order1.timestamp());
+            // Fetch and print all orders
+            List<Order> orders = shopService.getOrdersByStatus(OrderStatus.COMPLETED);
+            System.out.println("Completed Orders: " + orders);
+        } catch (IllegalArgumentException e) {
+            System.out.println(e.getMessage());
         }
 
-        // Bestellung nach Status filtern
-        System.out.println("\nOrders with status PROCESSING:");
-        List<Order> processingOrders = shopService.getOrdersByStatus(OrderStatus.PROCESSING);
-        processingOrders.forEach(order ->
-                System.out.println("Order ID: " + order.id() + ", Status: " + order.status())
-        );
-
-        // Bestellung updaten
-        Order updatedOrder = shopService.updateOrder(order1.id(), OrderStatus.IN_DELIVERY);
-        System.out.println("\nOrder updated:");
-        System.out.println("Order ID: " + updatedOrder.id());
-        System.out.println("Order Status: " + updatedOrder.status());
-        System.out.println("Order Date: " + updatedOrder.timestamp());
-
-        // Test für nicht existierendes Produkt
+        // Attempt to add an order with an invalid product ID
         try {
-            shopService.addOrder(Arrays.asList("999"));
+            List<String> invalidProductIds = List.of("2"); // Assuming "2" is not a valid product ID
+            shopService.addOrder(invalidProductIds);
         } catch (IllegalArgumentException e) {
-            System.out.println("\nError: " + e.getMessage());
+            System.out.println("Failed to create order: " + e.getMessage());
         }
     }
 }
